--- a/AppleTraining/SpringBoot_demo4/pom.xml
+++ b/AppleTraining/SpringBoot_demo4/pom.xml
@@ -8,32 +8,30 @@
 		<version>3.0.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.cts.project</groupId>
-	<artifactId>SpringBoot_demo1</artifactId>
+	<groupId>com.cts.webservice</groupId>
+	<artifactId>SpringBoot_demo4</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SpringBoot_demo1</name>
-	<description>Demo project for Spring Boot</description>
+	<name>SpringBoot_demo4</name>
+	<description>Building a Restful web service</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 	</dependencies>
 
